--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "animate.css-react": "^1.1.0",
     "firebase": "^9.9.3",
     "react": "^18.2.0",
     "react-animated-css": "^1.2.1",
